; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_destroy_crap.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_destroy_crap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"ohthispain\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @destroy_crap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @destroy_crap(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8**, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8** @luaL_checkudata(i32* %4, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i8** %5, i8*** %3, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = getelementptr inbounds i8*, i8** %6, i64 0
  %8 = load i8*, i8** %7, align 8
  %9 = call i32 @talloc_free(i8* %8)
  %10 = load i8**, i8*** %3, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  store i8* null, i8** %11, align 8
  ret i32 0
}

declare dso_local i8** @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @talloc_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
